--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-python-telegram-bot>=20.3,<21
+python-telegram-bot==21.6
 requests>=2.31.0
 pandas>=2.0.3
 numpy>=1.25.0
 vaderSentiment>=3.3.2
 python-dotenv>=1.0.0
+aiohttp>=3.9.3
